# DIPP

./: .gitignore  .gitmodules  README.md  configure  configure_run  meson.build
protos/: dtpmetadata.proto  metadata.proto  pipeline_config.proto
sim/: camera_control.c
src/: battery_simulator.c  dipp_config.c  dipp_process.c  logger.c  main.c  mock_energy_server.c  telemetry.c
src/cost_store/: cost_store.c  cost_store_mem.c  cost_store_mmap.c
src/heuristics/: best_effort_heuristic.c  default_effort.c  implementation_judge.c  lowest_effort_heuristic.c
src/image/: image_store.c
src/include/: battery_simulator.h  dipp_config.h  dipp_error.h  dipp_process.h  logger.h  mock_energy_server.h  telemetry.h
src/include/cost_store/: cost_store.h
src/include/heuristics/: heuristics.h
src/include/image/: image_store.h
src/include/param/: dipp_config_param.h  dipp_paramids.h
src/include/pipeline/: pipeline_executor.h
src/include/priority_queue/: priority_queue.h
src/include/process/: process_module.h
src/include/protobuf/: pipeline_config.pb-c.h
src/include/utils/: cost_store.h  murmur_hash.h  priority_queue.h
src/include/vmem/: vmem_dtp_server.h
src/pipeline/: pipeline_executor.c
src/priority_queue/: priority_queue.c  priority_queue_mem.c  priority_queue_mmap.c
src/process/: process_module.c
src/protobuf/: module_config.pb-c.c  pipeline_config.pb-c.c
src/utils/: cost_store.c  murmur_hash.c  priority_queue.c
src/vmem/: vmem_dtp_server.c  vmem_ring_buffer.c
tools/ring_buffer_upload/: meson.build  ring_buffer_upload.c
tools/sim/: camera
